--- a/ssol-cacheservice/src/main/resources/application.properties
+++ b/ssol-cacheservice/src/main/resources/application.properties
@@ -2,17 +2,25 @@
 server.port=8080
 
 # Ehcache settings
-spring.cache.cache-names=cache
+spring.cache.cache-names=cache1
 spring.cache.type=ehcache
 spring.cache.ehcache.config=classpath:ehcache.xml 
 
 #DB settings
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
 
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto = update
+
+spring.datasource.name=cache_db
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.initialize=false
+spring.datasource.url=jdbc:h2:file:~/cache_db;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;
+#;IFEXISTS=TRUE
 
 # HikariCP settings
 spring.datasource.hikari.connection-timeout=60000
@@ -20,6 +28,9 @@ spring.datasource.hikari.maximum-pool-size=5
 
 # logging
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
-logging.level.org.hibernate.SQL=debug
-#logging.level.org.hibernate.type.descriptor.sql=trace
-logging.level.=error
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
+logging.level.=DEBUG
+logging.file=C:/Users/trigubovich_o/logs/ssol_cache.log
+logging.file.max-size=50MB
