--- a/ssol-cacheservice/pom.xml
+++ b/ssol-cacheservice/pom.xml
@@ -3,23 +3,26 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
 	
 	<modelVersion>4.0.0</modelVersion>
-	
-	<groupId>com.ssol</groupId>
-	<artifactId>ssol-cacheservice</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ssol-cacheservice</name>
-	<description>Test cache microservice</description>
+ 
+    <groupId>com.ssol</groupId>
+    <artifactId>ssol-cacheservice</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    <name>ssol-cacheservice</name>
+    <description>Test cache microservice</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.7.RELEASE</version>
+		<version>2.0.9.RELEASE</version>
+        <relativePath/>
 	</parent>
+ 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -72,7 +75,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
+   
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-surefire-plugin</artifactId>
+               <version>2.19.1</version>
+           </plugin>
+        
+        </plugins>
 	</build>
 
 </project>
